# assign7

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  endmenu.cpp  endmenu.h  endmenu.ui  flappybird.cpp  flappybird.h  flow chart.drawio  gameprocess.cpp  gameprocess.h  getreadymenu.cpp  getreadymenu.h  getreadymenu.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resizeablepicture.cpp  resizeablepicture.h  resources.qrc  scoredisplay.cpp  scoredisplay.h  scoredisplay.ui  scoredisplay2.cpp  scoredisplay2.h  scoredisplay2.ui  startmenu.cpp  startmenu.h  startmenu.ui  uml class diagram.drawio
